display error for no recipe data fetched

--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -39,4 +39,9 @@
   .twitter-link:visited {
     color: $color-grey-dark-2;
   }
+
+  .daffa-link:link,
+  .daffa-link:visited {
+    color: $color-grey-dark-2;
+  }
 }
